updated code in Grid.java - latest version